test/Sema/undefined_name.m
function y = f(x)
    y = x + undefined_thing;
end
